--- a/sites/dellos/index.html
+++ b/sites/dellos/index.html
@@ -6,7 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="shortcut icon" href="images/icons/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="landing">
@@ -16,28 +25,30 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Dellos</a></h1>
+					<h1 id="logo"><a href="index.html"><img src="images/icons/logo.png" height="40" alt=""></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Главная</a></li>
 							<li><a href="#">Продукция</a></li>
-							<li><a href="partners.html">Партнеры</a></li>
+							<li><a href="partners.html">Где купить</a></li>
+							<li><a href="faq.html">FAQ</a></li>
 							<li><a href="contacts.html">Контакты</a></li>
-							<li><a href="#" class="button special">Заказать</a></li>
+							<li><a href="#order" class="button special">Заказать</a></li>
 						</ul>
 					</nav>
 				</header>
 
-			<!-- 		<video autoplay loop poster="sail.jpg" id="bgvid">
+
+			<!-- Banner -->
+				<section id="banner">
+					<video autoplay loop poster="sail.jpg" id="bgvid">
 						<source src="video/sail.webm" type="video/webm">
 						<source src="video/sail.mp4" type="video/mp4">
 					</video>
- -->
-			<!-- Banner -->
-				<section id="banner">
+
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
+							<h2>The fummmture has landed</h2>
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header>
@@ -158,7 +169,8 @@
 					</div>
 				</section>
 
-			<!-- Five -->
+			<!-- Обратная связь -->
+				<div id="order"></div>
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
@@ -171,9 +183,9 @@
 									<div class="select-wrapper">
 										<select type="category" name="email" id="category" placeholder="Выберите тему" />
 											<option value="1">Выберите тему</option>
-											<option value="2">Закупка</option>
-											<option value="3">Хочу бутылочку</option>
-											<option value="3">Тонны, тооннны!</option>
+											<option value="2">Заказ</option>
+											<option value="3">Оплата</option>
+											<option value="3">Другое</option>
 										</select>
 									</div>
 								</div>
