--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <h3>Dellos</h3>
         <p>В разработке <a href="http://paperdavid.github.io/sites/dellos" target="_blank">&#128279;</a></p>
 
+        <h3>Text for GL</h3>
+        <p>Верстка информационных страниц<a href="http://paperdavid.github.io/sites/text" target="_blank">&#128279;</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages</small></p>
