--- a/sites/dellos/contacts.html
+++ b/sites/dellos/contacts.html
@@ -17,6 +17,8 @@
 		<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
 		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/contactform.js"></script>
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
@@ -167,31 +169,32 @@
 								<p>Если у вас возникли вопросы или вы хотите арендовать помещение, пишите нам. Чтобы написать нам письмо, заполните, пожалуйста, форму обратной связи.</p>
 								</div>
 								<div class="8u 12u$(medium)">
-								<form method="post" action="#" class="container 50%">
-									<div class="row uniform 50%">
-										<div class="12u 12u$(xsmall)">
-											<div class="select-wrapper">
-												<select type="category" name="email" id="category" placeholder="Выберите тему" />
-													<option value="1">Выберите тему</option>
-													<option value="2">Заказ</option>
-													<option value="3">Оплата</option>
-													<option value="3">Другое</option>
-												</select>
-											</div>
-										</div>
+				<form method="post" action="" id="ajax-contact-form" class="container 50%">
+							<div class="row uniform 50%">
+								<div class="12u 12u$(xsmall)">
+									<div class="select-wrapper">
+										<select type="text" name="type" id="category" placeholder="Выберите тему" />
+											<option value="1">Выберите тему</option>
+											<option value="Zakaz">Заказ</option>
+											<option value="Oplata">Оплата</option>
+											<option value="Drugoe">Другое</option>
+										</select>
 									</div>
-									<div class="row uniform 50%">
-										<div class="12u 12u$(xsmall)"><textarea type="email" name="email" id="email" placeholder="Сообщение" /></textarea></div>
-									</div>
-									<div class="row uniform 50%">
-										<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Имя" /></div>
-										<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Телефон" /></div>
-									</div>
-									<div class="row uniform 50%">
-										<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Ваш email" /></div>
-										<div class="4u$ 12u$(xsmall)"><input type="submit" value="Отправить" class="fit special" /></div>
-										</div>
-								</form>
+								</div>
+							</div>
+							<div class="row uniform 50%">
+								<div class="12u 12u$(xsmall)"><textarea type="text" name="mes" placeholder="Сообщение" /></textarea></div>
+							</div>
+							<div class="row uniform 50%">
+								<div class="6u 12u$(xsmall)"><input type="text" name="name" placeholder="Имя" /></div>
+								<div class="6u 12u$(xsmall)"><input type="text" name="tel" placeholder="Телефон" /></div>
+							</div>
+							<div class="row uniform 50%">
+								<div class="8u 12u$(xsmall)"><input type="text" name="email" placeholder="Ваш email" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" name="submit" value="Отправить" class="btn fit special" /></div>
+							</div>
+							<div id="note"></div>
+						</form>
 								</section>
 							</div>
 						</div>
@@ -216,7 +219,6 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
