--- a/sites/dellos/faq.html
+++ b/sites/dellos/faq.html
@@ -15,13 +15,14 @@
 		<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
 		<link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
 		<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
-		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/contactform.js"></script>
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
-
-
 
 			<!-- Header -->
 				<header id="header">
@@ -43,34 +44,48 @@
 					<div class="container">
 						<header class="major">
 							<h2>FAQ</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>Ответы на часто задаваемые вопросы</p>
 						</header>
 
 						<!-- Content -->
 							<section id="content" class="faq">
 								<ul class="alt">
-											<li><h4>1. Dolor pulvinar etiam magna etiam.</h4>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quis cumque, totam natus. Veniam accusantium reprehenderit sequi omnis architecto soluta impedit, deleniti, at modi illum natus recusandae minima animi est! Repellat qui quam rem fugiat, veritatis expedita deserunt deleniti. Eius error expedita sapiente molestias accusantium, sint iure reiciendis vero sequi!</span>
+											<li><h4>1.	Где производится Напиток с алоэ Dellos?</h4>
+											<span>Напиток производится в Республике Корея компанией Dellos F&B Co., Ltd.</span>
 											</li> 
-											<li><h4>2. Dolor pulvinar etiam magna etiam.</h4>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quis cumque, totam natus. Veniam accusantium reprehenderit sequi omnis architecto soluta impedit, deleniti, at modi illum natus recusandae minima animi est! Repellat qui quam rem fugiat, veritatis expedita deserunt deleniti. Eius error expedita sapiente molestias accusantium, sint iure reiciendis vero sequi!</span>
+											<li><h4>2.	Где можно купить Напиток с алоэ Dellos?</h4>
+											<span>Напиток можно купить в магазинах наших партнеров, список которых Вы сможете найти в разделе «Где купить». Также можно сделать заказ на нашем сайте, оставив заявку с помощью формы обратной связи.</span>
 											</li>
-											<li><h4>3. Dolor pulvinar etiam magna etiam.</h4>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quis cumque, totam natus. Veniam accusantium reprehenderit sequi omnis architecto soluta impedit, deleniti, at modi illum natus recusandae minima animi est! Repellat qui quam rem fugiat, veritatis expedita deserunt deleniti. Eius error expedita sapiente molestias accusantium, sint iure reiciendis vero sequi!</span>
+											<li><h4>3.	Какой минимальный объем заказа на сайте?</h4>
+											<span>Минимальный объем заказа на сайте – одна упаковка.</span>
 											</li>
-											<li><h4>4. Dolor pulvinar etiam magna etiam.</h4>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quis cumque, totam natus. Veniam accusantium reprehenderit sequi omnis architecto soluta impedit, deleniti, at modi illum natus recusandae minima animi est! Repellat qui quam rem fugiat, veritatis expedita deserunt deleniti. Eius error expedita sapiente molestias accusantium, sint iure reiciendis vero sequi!</span>
+											<li><h4>4.	Сколько бутылок Напитка с алоэ Dellos в упаковке?</h4>
+											<span>В одной упаковке 20 бутылок объемом 500 мл или 12 бутылок объемом 1500 мл.</span>
 											</li>
-											<li><h4>5. Dolor pulvinar etiam magna etiam.</h4>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quis cumque, totam natus. Veniam accusantium reprehenderit sequi omnis architecto soluta impedit, deleniti, at modi illum natus recusandae minima animi est! Repellat qui quam rem fugiat, veritatis expedita deserunt deleniti. Eius error expedita sapiente molestias accusantium, sint iure reiciendis vero sequi!</span>
+											<li><h4>5.	Как оплатить заказ, сделанный на сайте?</h4>
+											<span>Оплата возможна только в безналичной форме. После того, как Вы оставите заявку на сайте, с Вами свяжется наш менеджер для подтверждения заказа и формирования счета на оплату.</span>
+
+											<li><h4>6.	Как забрать оплаченный заказ?</h4>
+											<span>После оплаты счета, Вы можете забрать Ваш заказ в нашем офисе по адресу г. Санкт-Петербург, Кондратьевский пр., д.72 лит. А по будним дням с 9:00 до 17:00.</span>
+											</li> 
+											<li><h4>7.	Разве алоэ не горький?</h4>
+											<span>Растение алоэ вера бывает разных сортов. Комнатный алоэ, который все знают – горький. В Напитке с алоэ Dellos используется специальный пищевой сорт алоэ, который выращивают на плантациях Таиланда, и он – сладкий.</span>
+											</li>
+											<li><h4>8.	Является ли Напиток с алоэ Dellos лечебным?</h4>
+											<span>Напиток с алоэ Dellos не является лекарством, но сохраняет все полезные свойства растения алоэ вера. </span>
+											</li>
+											<li><h4>9.	Чем полезен алоэ вера?</h4>
+											<span>Снижает уровень токсических веществ в организме; содержит витамины группы C, B, E, А; содержит микроэлементы, полезные для всех нас: марганец, медь, калий, натрий, сера, фосфор, хлор, бром, ванадий, железо, йод, серебро, фтор, кремний, цинк; укрепляет иммунитет; очищает кровь; обладает противовоспалительным, бактерицидным свойством; усиливает секрецию пищеварительных желез; нормализует уровень холестерина; нормализует обменные процессы в организме; ускоряет заживление ран, язв; снимает воспаление десен.</span>
+											</li>
+											<li><h4>10.	Какое количество Напитка с алоэ Dellos можно употреблять в день?</h4>
+											<span>В день Вы можете выпить столько, сколько захочется – количество не ограничено.</span>
 											</li>
 										</ul>
 							</section>
-
 					</div>
 				</div>
 
-							<!-- Обратная связь -->
+				<!-- Обратная связь -->
 				<div id="order"></div>
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
@@ -78,30 +93,31 @@
 							<h2>Мы на связи!</h2>
 							<p>Напишите нам, если у вас остались вопросы или вы хотите приобрести<br>нашу продукцию. Мы свяжемся в ближайшее время.</p>
 						</header>
-						<form method="post" action="#" class="container 50%">
+				<form method="post" action="" id="ajax-contact-form" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="12u 12u$(xsmall)">
 									<div class="select-wrapper">
-										<select type="category" name="email" id="category" placeholder="Выберите тему" />
+										<select type="text" name="type" id="category" placeholder="Выберите тему" />
 											<option value="1">Выберите тему</option>
-											<option value="2">Заказ</option>
-											<option value="3">Оплата</option>
-											<option value="3">Другое</option>
+											<option value="Zakaz">Заказ</option>
+											<option value="Oplata">Оплата</option>
+											<option value="Drugoe">Другое</option>
 										</select>
 									</div>
 								</div>
 							</div>
 							<div class="row uniform 50%">
-								<div class="12u 12u$(xsmall)"><textarea type="email" name="email" id="email" placeholder="Сообщение" /></textarea></div>
+								<div class="12u 12u$(xsmall)"><textarea type="text" name="mes" placeholder="Сообщение" /></textarea></div>
 							</div>
 							<div class="row uniform 50%">
-								<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Имя" /></div>
-								<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Телефон" /></div>
+								<div class="6u 12u$(xsmall)"><input type="text" name="name" placeholder="Имя" /></div>
+								<div class="6u 12u$(xsmall)"><input type="text" name="tel" placeholder="Телефон" /></div>
 							</div>
 							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Ваш email" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Отправить" class="fit special" /></div>
+								<div class="8u 12u$(xsmall)"><input type="text" name="email" placeholder="Ваш email" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" name="submit" value="Отправить" class="btn fit special" /></div>
 							</div>
+							<div id="note"></div>
 						</form>
 					</div>
 				</section>
@@ -124,7 +140,6 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
