--- a/sites/dellos/index.html
+++ b/sites/dellos/index.html
@@ -38,172 +38,172 @@
 					</nav>
 				</header>
 
+      <!-- Banner -->
+        <section id="banner">
+          <video autoplay loop poster="sail.jpg" id="bgvid">
+            <source src="video/sail.webm" type="video/webm">
+            <source src="video/sail.mp4" type="video/mp4">
+          </video>
 
-			<!-- Banner -->
-				<section id="banner">
-					<video autoplay loop poster="sail.jpg" id="bgvid">
-						<source src="video/sail.webm" type="video/webm">
-						<source src="video/sail.mp4" type="video/mp4">
-					</video>
+          <div class="content">
+            <header>
+              <h2>Напиток с алоэ Dellos</h2>
+              <p>And there are no hoverboards or flying cars.<br />
+              Just apps. Lots of mother flipping apps.</p>
+            </header>
+            <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+          </div>
+          <a href="#one" class="goto-next scrolly">Next</a>
+        </section>
 
-					<div class="content">
-						<header>
-							<h2>The fummmture has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
-						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
+      <!-- One -->
+        <section id="one" class="spotlight style1 bottom">
+          <span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+          <div class="content">
+            <div class="container">
+              <div class="row">
+                <div class="4u 12u$(medium)">
+                  <header>
+                    <h2>Odio faucibus ipsum integer consequat</h2>
+                    <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+                  </header>
+                </div>
+                <div class="4u 12u$(medium)">
+                  <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
+                  Blandit orci porttitor semper. Arcu phasellus tortor enim mi
+                  nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
+                  augue varius tempus lobortis porttitor accumsan consequat
+                  adipiscing lorem dolor.</p>
+                </div>
+                <div class="4u$ 12u$(medium)">
+                  <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+                  adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+                  Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+                  mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+                  ipsum dolor nullam.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a href="#two" class="goto-next scrolly">Next</a>
+        </section>
 
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="4u 12u$(medium)">
-									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
-									</header>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
+      <!-- Two -->
+<!--        <section id="two" class="spotlight style2 right">
+          <span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+          <div class="content">
+            <header>
+              <h2>Interdum amet non magna accumsan</h2>
+              <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+            </header>
+            <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+            <ul class="actions">
+              <li><a href="#" class="button">Подробнее</a></li>
+            </ul>
+          </div>
+          <a href="#three" class="goto-next scrolly">Next</a>
+        </section> -->
 
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Подробнее</a></li>
-						</ul>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
+      <!-- Three -->
+<!--        <section id="three" class="spotlight style3 left">
+          <span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+          <div class="content">
+            <header>
+              <h2>Interdum felis blandit praesent sed augue</h2>
+              <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+            </header>
+            <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+            <ul class="actions">
+              <li><a href="#" class="button">Подробнее</a></li>
+            </ul>
+          </div>
+          <a href="#four" class="goto-next scrolly">Next</a>
+        </section> -->
 
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Подробнее</a></li>
-						</ul>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
+      <!-- Four -->
+        <section id="four" class="wrapper style1 special fade-up">
+          <div class="container">
+            <header class="major">
+              <h2>Accumsan sed tempus adipiscing blandit</h2>
+              <p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+            </header>
+            <div class="box alt">
+              <div class="row uniform">
+                <section class="4u 6u(medium) 12u$(xsmall)">
+                  <span class="icon alt major fa-area-chart"></span>
+                  <h3>Ipsum sed commodo</h3>
+                  <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                </section>
+                <section class="4u 6u$(medium) 12u$(xsmall)">
+                  <span class="icon alt major fa-comment"></span>
+                  <h3>Eleifend lorem ornare</h3>
+                  <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                </section>
+                <section class="4u$ 6u(medium) 12u$(xsmall)">
+                  <span class="icon alt major fa-flask"></span>
+                  <h3>Cubilia cep lobortis</h3>
+                  <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                </section>
+                <section class="2u 6u$(medium) 12u$(xsmall)">
+                </section>
+                <section class="4u 6u$(medium) 12u$(xsmall)">
+                  <span class="icon alt major fa-paper-plane"></span>
+                  <h3>Non semper interdum</h3>
+                  <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                </section>
+                <section class="4u 6u(medium) 12u$(xsmall)">
+                  <span class="icon alt major fa-file"></span>
+                  <h3>Odio laoreet accumsan</h3>
+                  <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                </section>
+                <section class="2u$ 6u$(medium) 12u$(xsmall)">
+                </section>
+              </div>
+            </div>
+            <footer class="major">
+              <ul class="actions">
+                <li><a href="#" class="button">Magna sed feugiat</a></li>
+              </ul>
+            </footer>
+          </div>
+        </section>
 
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
-						</header>
-						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="2u 6u$(medium) 12u$(xsmall)">
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="2u$ 6u$(medium) 12u$(xsmall)">
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
-					</div>
-				</section>
-
-			<!-- Обратная связь -->
-				<div id="order"></div>
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Мы на связи!</h2>
-							<p>Напишите нам, если у вас остались вопросы или вы хотите приобрести<br>нашу продукцию. Мы свяжемся в ближайшее время.</p>
-						</header>
-						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<div class="12u 12u$(xsmall)">
-									<div class="select-wrapper">
-										<select type="category" name="email" id="category" placeholder="Выберите тему" />
-											<option value="1">Выберите тему</option>
-											<option value="2">Заказ</option>
-											<option value="3">Оплата</option>
-											<option value="3">Другое</option>
-										</select>
-									</div>
-								</div>
-							</div>
-							<div class="row uniform 50%">
-								<div class="12u 12u$(xsmall)"><textarea type="email" name="email" id="email" placeholder="Сообщение" /></textarea></div>
-							</div>
-							<div class="row uniform 50%">
-								<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Имя" /></div>
-								<div class="6u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Телефон" /></div>
-							</div>
-							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Ваш email" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Отправить" class="fit special" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
+      <!-- Обратная связь -->
+        <div id="order"></div>
+        <section id="five" class="wrapper style2 special fade">
+          <div class="container">
+            <header>
+              <h2>Мы на связи!</h2>
+              <p>Напишите нам, если у вас остались вопросы или вы хотите приобрести<br>нашу продукцию. Мы свяжемся в ближайшее время.</p>
+            </header>
+        <form method="post" action="" id="ajax-contact-form" class="container 50%">
+              <div class="row uniform 50%">
+                <div class="12u 12u$(xsmall)">
+                  <div class="select-wrapper">
+                    <select type="text" name="type" id="category" placeholder="Выберите тему" />
+                      <option value="1">Выберите тему</option>
+                      <option value="Zakaz">Заказ</option>
+                      <option value="Oplata">Оплата</option>
+                      <option value="Drugoe">Другое</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="row uniform 50%">
+                <div class="12u 12u$(xsmall)"><textarea type="text" name="mes" placeholder="Сообщение" /></textarea></div>
+              </div>
+              <div class="row uniform 50%">
+                <div class="6u 12u$(xsmall)"><input type="text" name="name" placeholder="Имя" /></div>
+                <div class="6u 12u$(xsmall)"><input type="text" name="tel" placeholder="Телефон" /></div>
+              </div>
+              <div class="row uniform 50%">
+                <div class="8u 12u$(xsmall)"><input type="text" name="email" placeholder="Ваш email" /></div>
+                <div class="4u$ 12u$(xsmall)"><input type="submit" name="submit" value="Отправить" class="btn fit special" /></div>
+              </div>
+              <div id="note"></div>
+            </form>
+          </div>
+        </section>
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -222,6 +222,7 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/contactform.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
