--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
         <h3>Text for GL</h3>
         <p>Верстка информационных страниц<a href="http://paperdavid.github.io/sites/text" target="_blank">&#128279;</a></p>
+
+
+        <h3>КП</h3>
+        <p>Для счастья<a href="http://paperdavid.github.io/sites/schastye" target="_blank">&#128279;</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages</small></p>
