--- a/sites/schastye/index.html
+++ b/sites/schastye/index.html
@@ -65,7 +65,7 @@
               <label class="margin-toggle"></label><span class="marginnote">P. S. Точные стоимость и сроки определяются после согласования технического задания</span>
             </p>
           <strong>Стоимость: </strong>697 900 &#8381; <br>
-          <strong>Сроки: </strong> 3 месяца</h2>
+          <strong>Срок: </strong> 3 месяца</h2>
             
         </section>
         <hr>
